Updated ignore file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(IMGUI_GLFW_SUPPORT      ON CACHE BOOL "Enable glfw")
 set(IMGUI_OPENGL3_SUPPORT   ON CACHE BOOL "Enable opengl3")
-set(IMGUI_VULKAN_SUPPORT    OFF CACHE BOOL "Enable vulkan")
+set(IMGUI_VULKAN_SUPPORT    ON CACHE BOOL "Enable vulkan")
 if(WIN32)
     set(IMGUI_DIRECTX12_SUPPORT OFF CACHE BOOL "Enable directx12")
 endif()
