--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ ipch
 *.suo
 *.VC.db
 *.VC.VC.opendb
+CMakeSettings.json
 
 ## Getting files created in JSON/Schemas/Catalog/ from a VS2022 update
 JSON/
